Added Mauricio suggestions